--- a/config.toml
+++ b/config.toml
@@ -60,7 +60,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   # site default theme ["auto", "light", "dark"]
   defaultTheme = "auto"
   # public git repo url only then enableGitInfo is true
-  gitRepo = ""
+  gitRepo = "https://github.com/anthares101/raptor-blog"
   # website title for Open Graph and Twitter Cards
   title = "Anthares101 Blog"
   # website description for RSS, SEO, Open Graph and Twitter Cards
