--- a/config.toml
+++ b/config.toml
@@ -122,7 +122,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       #  title shown in home page (HTML format is supported)
       title = "Anthares101"
       # subtitle shown in home page (HTML format is supported)
-      subtitle = "Site under construction!"
+      subtitle = "Always a good time to learn new things"
       # whether to use typeit animation for subtitle
       typeit = true
       # whether to show social links
@@ -207,5 +207,3 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   [markup.tableOfContents]
     startLevel = 2
     endLevel = 6
-
-
