--- a/config.toml
+++ b/config.toml
@@ -76,7 +76,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   # website title for Open Graph and Twitter Cards
   title = "Raptor Blog"
   # website description for RSS, SEO, Open Graph and Twitter Cards
-  description = "This is my blog"
+  description = "Always a good time to learn new things"
 
   # website images for Open Graph and Twitter Cards
   images = ["/logo.png"]
