--- a/config.toml
+++ b/config.toml
@@ -71,7 +71,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   description = "Always a good time to learn new things"
 
   # website images for Open Graph and Twitter Cards
-  images = ["/logo.png"]
+  images = ["/banner.png"]
 
   # Header config
   [params.header]
@@ -184,9 +184,9 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
   #  Site SEO config
   [params.seo]
     # image URL
-    image = ""
+    image = "/banner.png"
     # thumbnail URL
-    thumbnailUrl = ""
+    thumbnailUrl = "/banner.png"
 
 [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
