--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 
 [params]
   # site default theme ["auto", "light", "dark"]
-  defaultTheme = "auto"
+  defaultTheme = "dark"
   # website title for Open Graph and Twitter Cards
   title = "Raptor Blog"
   # website description for RSS, SEO, Open Graph and Twitter Cards
